--- a/templates/server_default.erb
+++ b/templates/server_default.erb
@@ -1,2 +1,5 @@
 # Change to yes, to enable Graylog2 on boot
 RUN=<%= @run %>
+<% if @max_heap_size -%>
+DAEMON_ARGS="-Xms<%= @max_heap_size -%> -Xmx<%= @max_heap_size -%> -jar $JAR_FILE -p $PIDFILE -f /etc/graylog2/server/server.conf"
+<% end -%>
